# noct

./: .editorconfig  404.html  Dockerfile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  document.yml  pythonpackage.yml
common/project/: index.html
docs/: index.md
docs/common/: install.md  project.md
docs/slack/: index.md
docs/theme/: highlight.css
noct/: cli.py
noct/schema/: __init__.py  slack.py
noct/schema/attachment/: __init__.py  action.py  attachment.py
noct/schema/block/: __init__.py  divider.py  field.py  plain_text.py  section.py
search/: search_index.json
slack/: index.html
tests/: test_noct.py  test_ok.py  test_slack.py
