[tool.poetry]
name = "noct"
version = "0.1.1"
description = "Command Line Notification Tool"
authors = ["Naoya Sawada <naoya@tuntunkun.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
